--- a/serverless.yml
+++ b/serverless.yml
@@ -66,7 +66,7 @@ functions:
           method: delete
           cors: true
 
-  getTranslate:
+  translate:
     handler: todos/translate.getTranslate
     events:
       - http:
